--- a/index.html
+++ b/index.html
@@ -72,6 +72,30 @@
     </div>
 </section>
 
+<section class="section3">
+    <div class="trainer-div"> 
+        <h4 class="trainer">Testmonials</h4>
+            <div class="small-div"> 
+              
+                <div class="blue-circle"> 
+                    <a class="icon" href="#"> 
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="caret-left" class="svg-inline--fa fa-caret-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="currentColor" d="M137.4 406.6l-128-127.1C3.125 272.4 0 264.2 0 255.1s3.125-16.38 9.375-22.63l128-127.1c9.156-9.156 22.91-11.9 34.88-6.943S192 115.1 192 128v255.1c0 12.94-7.781 24.62-19.75 29.58S146.5 415.8 137.4 406.6z"></path></svg> </a> 
+                </div>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero  
+                </p>                
+                <div class="blue-circle"> 
+                    <a class="icon" href="#"> 
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="caret-right" class="svg-inline--fa fa-caret-right" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="currentColor" d="M118.6 105.4l128 127.1C252.9 239.6 256 247.8 256 255.1s-3.125 16.38-9.375 22.63l-128 127.1c-9.156 9.156-22.91 11.9-34.88 6.943S64 396.9 64 383.1V128c0-12.94 7.781-24.62 19.75-29.58S109.5 96.23 118.6 105.4z"></path></svg> </a>
+                </div>
+            </div>
+            <img class="image-exercing" src="images/woman-exercing.png" alt="exercing">
+            <h5 class="name"> Ahmed Elsayed</h5>
+    </div>
+
+</section>
+
+
 <section>
     <div class="form-div">
         <div class="left-div"> 
