--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
         <div class="first-div"> 
             <img class="image-div" src="images/classic.png" alt="classic">
             <div class="text-div"> 
-            <h2> Body Building With Classic </h2>
-            <h5> Trained Achieve Your Goals </h5>
-             <a class="price-box1" href="#">  $60*/M </a>
+                <h2> Body Building With Classic </h2>
+                <h5> Trained Achieve Your Goals </h5>
+                <a class="price-box1" href="#">  $60*/M </a>
             </div>
         </div>
         <div class="second-div"> 
             <img class="image-div" src="images/standard.png" alt="classic">
             <div class="text-div"> 
-            <h2> Body Building With Standard </h2>
-            <h5> Trained Achieve Your Goals </h5>
-             <a class="price-box2" href="#">  $120*/M </a>
+                <h2> Body Building With Standard </h2>
+                <h5> Trained Achieve Your Goals </h5>
+                <a class="price-box2" href="#">  $120*/M </a>
             </div>
         </div>
         <div class="third-div"> 
             <img class="image-div" src="images/premium.png" alt="classic">
             <div class="text-div"> 
-            <h2> Body Building With Premium </h2>
-            <h5> Trained Achieve Your Goals </h5>
-             <a class="price-box3" href="#">  $200*/M </a>
+                <h2> Body Building With Premium </h2>
+                <h5> Trained Achieve Your Goals </h5>
+                <a class="price-box3" href="#">  $200*/M </a>
             </div>
         </div>
 
@@ -135,7 +135,24 @@
 
 </section>
 
-    <footer>
+    <!-- <footer class="footer">
+        <div> <a class="nav-image" href="#"> <img src="images/bestrong.svg" alt="bestrong"> </a> </div>
+
+        <div class="">
+            <h4> Quick Contacts</h4>
+            <h5> 50 Raritan Center Pkwy, Edison, NJ 08837, USA </h5>
+            <h4> +00 111 222 1234 </h4>
+            <h4> Bestrong@gmail.com</h4>
+            <div class="icons">
+                <i class="fab fa-facebook-f"></i>
+
+
+            </div>
+            
+        </div> -->
+        
+        <div></div>
+
 
 
 
