--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness</title>
     <script src="https://kit.fontawesome.com/6de6aa5275.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -143,9 +144,9 @@
             <h4 class="number"> +00 111 222 1234 </h4>
             <h4 class="mail"> Bestrong@gmail.com</h4>
             <div class="social">
-                <a href="facebook.com">  <i class="fab fa-facebook-f"></i> </a>
-                <a href="instagram.com">  <i class="fab fa-instagram"></i> </a>
-                <a href="twitter.com">  <i class="fab fa-twitter"></i> </a>
+                <a href="http://facebook.com">  <i class="fab fa-facebook-f"></i> </a>
+                <a href="http://instagram.com">  <i class="fab fa-instagram"></i> </a>
+                <a href="http://twitter.com">  <i class="fab fa-twitter"></i> </a>
                 
             </div>
             
