--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="workout">
+    <meta name="keywords" content="Yoga Pilates, Weight Lifting, Cycle Training, Gymnastic, workout">
+    <meta name="author" content="Tamar">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- fb meta tags -->
+    <meta property="og:url"                content="https://github.com/tamartsetskhladze/fitness" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Practice Hard, Play Strong, Pain Is Glory" />
+    <meta property="og:description"        content="Solutions For Moving Better And Feeling Althiers" />
+    <meta property="og:image"              content=" https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F35%2F2010%2F07%2F28170650%2Ffb-interval-training-workouts.jpg&q=85 " />
+
     <title>Fitness</title>
     <script src="https://kit.fontawesome.com/6de6aa5275.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="images/icon.jpg" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -146,8 +160,9 @@
         <div class="text-footer">
             <h4 class="footer-head"> Quick Contacts</h4>
             <h5 class="address"> 50 Raritan Center Pkwy, Edison, NJ 08837, USA </h5>
-            <h4 class="number"> +00 111 222 1234 </h4>
-            <h4 class="mail"> Bestrong@gmail.com</h4>
+            
+            <h4 class="number"> <i class="fas fa-phone-volume"></i> +00 111 222 1234 </h4>
+            <h4 class="mail"> <i class="far fa-envelope"></i> Bestrong@gmail.com</h4>
             <div class="social">
                 <a href="http://facebook.com" target="blank">  <i class="fab fa-facebook-f"></i> </a>
                 <a href="http://instagram.com" target="blank">  <i class="fab fa-instagram"></i> </a>
