--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
 </section>
 
-<section">
+<section>
     <div class="trainer-div"> 
         <h3> Meet Our Team</h3>
         <p class="paragraph2"> If you run a fitness gym, this is one slogan that can bring customers in. No one likes having to drive miles out of their way to go to the gym. It is always easier to have a gym that is actually close to home. Your body hears everything that your mind says.</p>
